syntax = "proto3";

package common.proto;

// Task Events operation code
enum TaskOperation {
    CREATE = 0;
    CANCEL = 1;
    UPDATE = 2;
}

// Hub task status
enum TaskStatus {
    START  = 0;
    START_SUCCESS = 1;
    START_FAILURE = 2;
    RUNNING = 3;
    START_FAILED = 4;
    UPDATING = 5;
    UPDATE_FAILURE = 6;
    UPDATE_FAILED = 7;
    CANCELLED = 8;
    DONE = 9;
}

// Data center status
enum DataCenterStatus {
    AVALIABLE = 0;
    UNAVALIABLE = 1;
}

// CLI reply status
enum ReplyCode {
    SUCCESS = 0;
    FAILURE = 1;
}
